--- a/src/main/resources/templates/webpage/assessor-questionnaire.html
+++ b/src/main/resources/templates/webpage/assessor-questionnaire.html
@@ -6,6 +6,8 @@
 <div class="row col-md-12 margin-top">
 
     <div class="offset-1"></div>
+    <span class="help-block invalid-feedback" id="question-error-1" style="display: block;"></span>
+    <span class="help-block invalid-feedback" th:text="${question}" style="display: block;"></span>
     <div class="col-md-10">
         <table class="table table-light table-hover table-question ">
             <thead class="thead-dark">
@@ -44,14 +46,18 @@
     </div>
     <div class="formWrapper">
         <div class="formContainer">
-            <form method="post" class="text-center" action="/question/add">
+            <form method="post" class="text-center" action="/assessor-dashboard/question/add"
+                  th:object="${questionForm}" onsubmit="return onSubmit()">
                 <div class="form-group">
                     <label for="question">Question</label>
-                    <input name="question" class="form-control" id="question" />
-                    <input name="id" type="hidden" th:value="${id}" />
+                    <span class="help-block invalid-feedback" id="question-error" style="display: block;"></span>
+                    <input name="question" class="form-control" id="question"/>
+                    <input name="id" type="hidden" th:value="${id}"/>
                 </div>
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                <button type="submit" class="btn btn-next btn-fill btn-success btn-wd" id="question-add">Create Question</button>
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <button type="submit" class="btn btn-next btn-fill btn-success btn-wd" id="question-add">Create
+                    Question
+                </button>
             </form>
         </div>
     </div>
@@ -73,6 +79,23 @@
         </div>
     </div>
 </div>
+<script type="application/javascript">
+    function onSubmit(e) {
+        /*<![CDATA[*/
+        var question = $('#question').val();
+
+        if (question.length < 10) {
+            $('#question-error').html("");
+            $('#question-error').append("Question must contain 10 characters");
+            return false;
+        }
+
+        e.preventDefault();
+        return true;
+        /*]]>*/
+    }
+
+</script>
 
 <script type="application/javascript">
     $(function () {
@@ -166,6 +189,15 @@
                         "question": $cell.find('.q-question').val()
                     };
 
+                    /*<![CDATA[*/
+                    if ($cell.find('.q-question').val().length < 10){
+                        $('#question-error-1').html("");
+                        $('#question-error-1').append("Question must contain 10 characters");
+                        return false;
+                    }
+                    /*]]>*/
+
+
                     $.ajax({
                         type: "POST",
                         url: "/assessor-dashboard/question/update",
@@ -177,12 +209,13 @@
                         $('.table-question tr .question-edit').css("color", "black");
                         $question_input.css("color", "black");
                         $question_input.attr("readonly", "readonly");
-
+                        $('#question-error-1').html("");
                     }).fail(function (jqXHR, textStatus, errorThrown) { //and what to do if it fails
                         console.log("error");
                     });
 
                     e.preventDefault();
+                    return true;
                 }
             }
         });
