--- a/src/main/resources/templates/webpage/company_dashboard.html
+++ b/src/main/resources/templates/webpage/company_dashboard.html
@@ -86,11 +86,13 @@
             <form method="post" class="text-center" id="pdf-form">
                 <div class="form-group">
                     <label for="introduction">Introduction</label>
+                    <span id="introduction-error" class="help-block invalid-feedback" style="display: block;"></span>
                     <textarea class="form-control" name="introduction" id="introduction" rows="3"></textarea>
                 </div>
 
                 <div class="form-group">
                     <label for="conclusion">Conclusion</label>
+                    <span id="conclusion-error" class="help-block invalid-feedback" style="display: block;"></span>
                     <textarea class="form-control" name="conclusion" id="conclusion" rows="3"></textarea>
                 </div>
 
@@ -102,9 +104,19 @@
         </div>
     </div>
 </div>
+
+<script type="application/javascript">
+    $(function () {
+        var token = $("meta[name='_csrf']").attr("content");
+        var header = $("meta[name='_csrf_header']").attr("content");
+        $(document).ajaxSend(function (e, xhr, options) {
+            xhr.setRequestHeader(header, token);
+        });
+    });
+</script>
 <script>
     $(document).ready(function () {
-        $("#create-report").on("click", function () {
+        $("li > #create-report").on("click", function () {
             $("#fullScreenUpdate").show();
         });
 
@@ -113,15 +125,30 @@
         })
     })
 </script>
-
-
 <script th:inline="javascript">
     $(document).ready(function () {
         var companyName = [[${CompanyName}]];
         $("company-title").val(companyName);
 
+        $('#report-submit').on('click', function (e) {
+            var introduction = $('#introduction').val();
+            var conclusion = $('#conclusion').val();
 
-        $('#report-submit').on('click', function () {
+            $('#conclusion-error').html("");
+            $('#introduction-error').html("");
+
+            /*<![CDATA[*/
+            if (introduction.length < 10 || conclusion.length < 10) {
+                if (introduction.length < 10){
+                    $('#introduction-error').append("Question must contain 10 characters");
+                }
+                if (conclusion.length < 10){
+                    $('#conclusion-error').append("Question must contain 10 characters");
+                }
+                return false;
+            }
+            /*]]>*/
+
             var qvi_score = $('#qviChartContainer')[0];
             var module_one = $('#mod1ChartContainer')[0];
             var module_two = $('#mod2ChartContainer')[0];
@@ -141,15 +168,18 @@
                 "moduleFive": convertCanvasToImage(module_five).src.split(',')[1]
             };
 
-            $.post("/uploadImages", scoreForm)
+            $.post("/company-dashboard/upload-data", scoreForm)
                 .done(function () {
                     console.log("success");
-                    window.location.href = "http://localhost:8080/api/test";
-                    $("#fullScreenUpdate").css("width", "0%");
+                    window.location.href = "http://localhost:8080/company-dashboard/download/pdf";
+                    $("#fullScreenUpdate").hide();
                 })
                 .fail(function () {
                     console.log("fail");
                 });
+
+            e.preventDefault();
+            return true;
         })
     });
 
