--- a/src/main/resources/templates/webpage/login.html
+++ b/src/main/resources/templates/webpage/login.html
@@ -10,16 +10,23 @@
             <div class="form-group">
                 <h2>Evolve</h2>
             </div>
-            <span class="help-block invalid-feedback" th:if="${error != null}" th:text="${error}"
-                  style="display: block;"></span>
+            <span th:if="${param.error}" class="help-block invalid">
+                Invalid username or password.
+            </span>
+            <span class="help-block invalid-feedback" th:if="${error != null}">Invalid username and password.</span>
+            <span th:if="${param.error}" class="help-block invalid-feedback">
+                Invalid username and password.
+            </span>
             <div class="form-group">
                 <input type="email" class="form-control" name="email" placeholder="Enter email"/>
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Enter password"/>
             </div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button type="submit" class="btn btn-primary form-control" value="login">Login</button>
+            <div class="form-group">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <button type="submit" class="btn btn-primary form-control" value="login">Login</button>
+            </div>
         </form>
     </div>
 </div>
