--- a/src/main/resources/templates/webpage/create-assessment.html
+++ b/src/main/resources/templates/webpage/create-assessment.html
@@ -28,7 +28,7 @@
 
 <script>
     function createAssessment() {
-        window.location.href = "http://localhost:8080/company-dashboard/create-assessment";
+        window.location.href = "https://localhost:8181/company-dashboard/create-assessment";
     }
     function returnToDashboard() {
         window.location.replace("http://127.0.0.1:8080/company-dashboard");
