--- a/src/main/resources/templates/webpage/add-customer.html
+++ b/src/main/resources/templates/webpage/add-customer.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="form-group">
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </form>
