--- a/src/main/resources/templates/webpage/login.html
+++ b/src/main/resources/templates/webpage/login.html
@@ -24,7 +24,7 @@
                 <input type="password" class="form-control" name="password" placeholder="Enter password"/>
             </div>
             <div class="form-group">
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
                 <button type="submit" class="btn btn-primary form-control" value="login">Login</button>
             </div>
         </form>
